* changed the css classes to some sort of a BEM-ish naming style
* accordions are now called collapsibles

* added a buttons script to deal with focusing on buttons so that the bigger shadow only shows on keyboard input

* tooltips have a top and bottom positioning (default is top)

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -181,11 +181,11 @@ input.button[type="submit"] {
     background-color: rgba(0, 0, 0, 0.12)!important;
 }
 
-.button.round {
+.button.rounded {
     border-radius: 32px;
 }
 
 .button .material-icons,
-.nav-item .material-icons {
+.nav__item .material-icons {
     vertical-align: middle;
 }
