--- a/css/base.css
+++ b/css/base.css
@@ -59,20 +59,20 @@
  /* Remove the unwanted box around FAB buttons */
  /* More info: http://goo.gl/IPwKi */
  a,
- .accordion,
- .button,
- .card,
- .material-checkbox,
- .dropdown,
- .dropdown-hover,
- .icon-toggle,
- .item,
- .nav-item,
- .dropdown-item,
- .material-radio,
- .material-range,
- .material-switch,
- .tab {
+.accordion,
+.button,
+.card,
+.dropdown,
+.dropdown-hover,
+.icon-toggle,
+.nav__item,
+.footer__item,
+.dropdown__item,
+.checkbox,
+.radio,
+.switch,
+.slider,
+.tab {
      -webkit-tap-highlight-color: transparent;
      -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
  }
@@ -103,11 +103,6 @@
  */
  main {
      display: block;
- }
-    
- /* Helps with border-radius */
- .responsive {
-     overflow-x: auto;
  }
 
  @media screen and (max-width: 47.9999em) {
