--- a/css/dropdowns.css
+++ b/css/dropdowns.css
@@ -6,7 +6,7 @@
 
 .dropdown,
 .dropdown-hover,
-.dropdown-item {
+.dropdown__item {
     -webkit-touch-callout: none;
       -webkit-user-select: none;
          -moz-user-select: none;
@@ -14,7 +14,7 @@
               user-select: none;
 }
 
-.dropdown-content {
+.dropdown__content {
     display: inline-block;
     height: 0;
     background: #f1f1f1;
@@ -28,78 +28,78 @@
             transition: all .3s cubic-bezier(0.4, 0.0, 0.2, 1), width .17s cubic-bezier(0.0, 0.0, 0.2, 1), height .21s cubic-bezier(0.0, 0.0, 0.2, 1);
 }
 
-.dropdown.is-upgraded .dropdown-content * {
+.dropdown.is-upgraded .dropdown__content * {
     white-space: nowrap;
 }
 
-.dropdown-content.bottom {
+.dropdown__content.bottom-left {
     top: 100%;
-}
-
-.dropdown-content.top {
-    bottom: 100%;
-}
-
-.dropdown-content.right {
     right: 0;
 }
 
-.dropdown-content.left {
+.dropdown__content.bottom-right {
+    top: 100%;
     left: 0;
 }
 
-.dropdown:not(.js-pos-static) .dropdown-content,
-.dropdown-hover:not(.js-pos-static) .dropdown-content {
+.dropdown__content.top-left {
+    bottom: 100%;
+    right: 0;
+}
+
+.dropdown__content.top-right {
+    bottom: 100%;
+    left: 0;
+}
+
+.dropdown:not(.js-pos-static) .dropdown__content,
+.dropdown-hover:not(.js-pos-static) .dropdown__content {
     position: absolute;
 }
 
-.dropdown.is-upgraded .dropdown-content,
-.dropdown-hover.is-upgraded .dropdown-content {
+.dropdown.is-upgraded .dropdown__content,
+.dropdown-hover.is-upgraded .dropdown__content {
     position: absolute;
 }
 
-.dropdown-hover.is-upgraded .dropdown-content,
-.dropdown.is-upgraded .dropdown-content {
+.dropdown-hover.is-upgraded .dropdown__content,
+.dropdown.is-upgraded .dropdown__content {
     min-width: 130px;
 }
 
-.dropdown-content.inactive,
-.dropdown-hover.is-upgraded:not(:hover) .dropdown-content {
+.dropdown__content.inactive,
+.dropdown-hover.is-upgraded:not(:hover) .dropdown__content {
     height: 0!important;
     width: 0!important;
     min-width: 0!important;
-    opacity: 0;
-    -webkit-transition: all 0s .18s, opacity .18s ease;
-         -o-transition: all 0s .18s, opacity .18s ease;
-            transition: all 0s .18s, opacity .18s ease;
-    -webkit-transition: all 0s .18s, opacity .18s cubic-bezier(0.4, 0.0, 0.2, 1);
-         -o-transition: all 0s .18s, opacity .18s cubic-bezier(0.4, 0.0, 0.2, 1);
-            transition: all 0s .18s, opacity .18s cubic-bezier(0.4, 0.0, 0.2, 1);
+    -webkit-transition: all 0s .18s;
+         -o-transition: all 0s .18s;
+            transition: all 0s .18s;
 }
 
-.dropdown-content * {
+.dropdown__content * {
     display: block!important;
     padding: 16px;
     cursor: pointer;
 }
 
-.dropdown-hover:not(.is-upgraded):hover .dropdown-content,
-.dropdown:not(.is-upgraded):hover .dropdown-content {
+.dropdown-hover:not(.is-upgraded):hover .dropdown__content,
+.dropdown:not(.is-upgraded):hover .dropdown__content {
     width: auto;
     height: auto;
 }
 
-.dropdown-content *:hover {
+.dropdown__content *:hover {
     background: rgba(158, 158, 158, 0.2);
 }
 
-.dropdown-content *:focus:not(:active) {
+.dropdown__content *:focus:not(:active) {
     background-color: rgba(0, 0, 0, 0.12);
 }
-.dropdown-content *:active {
+.dropdown__content *:active {
     background-color: rgba(158, 158, 158, 0.4);
 }
 
-.dropdown-content *::-moz-focus-inner {
+.dropdown__content *::-moz-focus-inner {
     border: 0;
 }
