--- a/css/overlays.css
+++ b/css/overlays.css
@@ -1,5 +1,5 @@
 .overlay,
-.overlay-bg {
+.overlay__bg {
     position: fixed;
     display: -webkit-box;
     display: -webkit-flex;
@@ -15,10 +15,10 @@
 }
 
 .overlay.is-upgraded,
-.overlay.is-upgraded .overlay-bg{
-    -webkit-transition: opacity .27s ease-in, height 0s linear .27s;
-         -o-transition: opacity .27s ease-in, height 0s linear .27s;
-            transition: opacity .27s ease-in, height 0s linear .27s;
+.overlay.is-upgraded .overlay__bg {
+    -webkit-transition: opacity .27s cubic-bezier(0.4, 0.0, 1, 1), height 0s linear .27s;
+         -o-transition: opacity .27s cubic-bezier(0.4, 0.0, 1, 1), height 0s linear .27s;
+            transition: opacity .27s cubic-bezier(0.4, 0.0, 1, 1), height 0s linear .27s;
 }
 
 .overlay {
@@ -26,7 +26,7 @@
      top: 0;
 }
 
-.overlay-bg {
+.overlay__bg {
     z-index: 1000;
     background-color: rgba(0, 0, 0, 0.5);
     opacity: 0;
@@ -37,14 +37,14 @@
 }
 
 .overlay-toggle:checked+.overlay,
-.overlay-toggle:checked+.overlay .overlay-bg {
+.overlay-toggle:checked+.overlay .overlay__bg {
     height: 100%;
     opacity: 1;        
 }
 
 .overlay-toggle:checked+.overlay.is-upgraded,
-.overlay-toggle:checked+.overlay.is-upgraded .overlay-bg {
-    -webkit-transition: height 0s, opacity .27s ease-out;
-         -o-transition: height 0s, opacity .27s ease-out;
-            transition: height 0s, opacity .27s ease-out;
+.overlay-toggle:checked+.overlay.is-upgraded .overlay__bg {
+    -webkit-transition: height 0s, opacity .27s cubic-bezier(0.0, 0.0, 0.2, 1);
+         -o-transition: height 0s, opacity .27s cubic-bezier(0.0, 0.0, 0.2, 1);
+            transition: height 0s, opacity .27s cubic-bezier(0.0, 0.0, 0.2, 1);
 }
