--- a/css/menus.css
+++ b/css/menus.css
@@ -1,12 +1,12 @@
-.dropdown,
-.dropdown-hover {
+.menu,
+.menu-hover {
     position: relative;
     display: inline-block!important;
 }
 
-.dropdown,
-.dropdown-hover,
-.dropdown__item {
+.menu,
+.menu-hover,
+.menu__item {
     -webkit-touch-callout: none;
       -webkit-user-select: none;
          -moz-user-select: none;
@@ -14,7 +14,7 @@
               user-select: none;
 }
 
-.dropdown__content {
+.menu__content {
     display: inline-block;
     height: 0;
     background: #f1f1f1;
@@ -28,47 +28,47 @@
             transition: all .3s cubic-bezier(0.4, 0.0, 0.2, 1), width .17s cubic-bezier(0.0, 0.0, 0.2, 1), height .21s cubic-bezier(0.0, 0.0, 0.2, 1), color .12s cubic-bezier(0.0, 0.0, 0.2, 1) .18s;
 }
 
-.dropdown.is-upgraded .dropdown__content * {
+.menu.is-upgraded .menu__content * {
     white-space: nowrap;
 }
 
-.dropdown__content.bottom-left {
+.menu__content.bottom-left {
     top: 100%;
     right: 0;
 }
 
-.dropdown__content.bottom-right {
+.menu__content.bottom-right {
     top: 100%;
     left: 0;
 }
 
-.dropdown__content.top-left {
+.menu__content.top-left {
     bottom: 100%;
     right: 0;
 }
 
-.dropdown__content.top-right {
+.menu__content.top-right {
     bottom: 100%;
     left: 0;
 }
 
-.dropdown:not(.js-pos-static) .dropdown__content,
-.dropdown-hover:not(.js-pos-static) .dropdown__content {
+.menu:not(.js-pos-static) .menu__content,
+.menu-hover:not(.js-pos-static) .menu__content {
     position: absolute;
 }
 
-.dropdown.is-upgraded .dropdown__content,
-.dropdown-hover.is-upgraded .dropdown__content {
+.menu.is-upgraded .menu__content,
+.menu-hover.is-upgraded .menu__content {
     position: absolute;
 }
 
-.dropdown-hover.is-upgraded .dropdown__content,
-.dropdown.is-upgraded .dropdown__content {
+.menu-hover.is-upgraded .menu__content,
+.menu.is-upgraded .menu__content {
     min-width: 130px;
 }
 
-.dropdown__content.inactive,
-.dropdown-hover.is-upgraded:not(:hover) .dropdown__content {
+.menu__content.inactive,
+.menu-hover.is-upgraded:not(:hover) .menu__content {
     height: 0!important;
     width: 0!important;
     min-width: 0!important;
@@ -78,29 +78,29 @@
     color: transparent!important;
 }
 
-.dropdown__content * {
+.menu__content * {
     display: block!important;
     padding: 16px;
     cursor: pointer;
 }
 
-.dropdown-hover:not(.is-upgraded):hover .dropdown__content,
-.dropdown:not(.is-upgraded):hover .dropdown__content {
+.menu-hover:not(.is-upgraded):hover .menu__content,
+.menu:not(.is-upgraded):hover .menu__content {
     width: auto;
     height: auto;
 }
 
-.dropdown__content *:hover {
+.menu__content *:hover {
     background: rgba(158, 158, 158, 0.2);
 }
 
-.dropdown__content *:focus:not(:active) {
+.menu__content *:focus:not(:active) {
     background-color: rgba(0, 0, 0, 0.12);
 }
-.dropdown__content *:active {
+.menu__content *:active {
     background-color: rgba(158, 158, 158, 0.4);
 }
 
-.dropdown__content *::-moz-focus-inner {
+.menu__content *::-moz-focus-inner {
     border: 0;
 }
