--- a/css/material-inputs.css
+++ b/css/material-inputs.css
@@ -118,14 +118,14 @@ textarea.textfield__input,
     display: none;
 }
 
-.checkbox .checkbox__label,
-.radio .radio__label,
-.switch .switch__label {
+.checkbox__label,
+.radio__label,
+.switch__label {
     font-size: 16px;
     padding-left: 5px;
 }
 
-.switch .switch__label {
+.switch__label {
     padding-top: 0.125em;
 }
 
@@ -153,14 +153,14 @@ textarea.textfield__input,
     cursor: pointer;
 }
 
-.checkbox .checkbox__check,
-.checkbox .checkbox__check::before,
-.checkbox .checkbox__check::after,
-.radio .radio__check,
-.radio .radio__check::after,
-.radio .radio__check::before,
-.switch .switch__check,
-.switch .switch__check::after {
+.checkbox__check,
+.checkbox__check::before,
+.checkbox__check::after,
+.radio__check,
+.radio__check::after,
+.radio__check::before,
+.switch__check,
+.switch__check::after {
     width: 16px;
     height: 16px;
     font-size: 16px;
@@ -172,14 +172,14 @@ textarea.textfield__input,
             user-select: none;
 }
 
-.checkbox .checkbox__check,
-.radio .radio__check,
-.switch .switch__check {
+.checkbox__check,
+.radio__check,
+.switch__check {
     position: relative;
 }
 
 /* layer 1 */
-.checkbox .checkbox__check::before {
+.checkbox__check::before {
     position: absolute;
     z-index: 1;
     content:"";
@@ -188,7 +188,7 @@ textarea.textfield__input,
 }
 
 /* layer 2 */
-.checkbox .checkbox__check::after {
+.checkbox__check::after {
     font-family: "Material Icons"!important;
     content: "check";
     position: absolute;
@@ -200,11 +200,11 @@ textarea.textfield__input,
 }
 
 /* active state */
-.checkbox input:checked+.checkbox__check::before {
+input:checked+.checkbox__check::before {
     border: 8px solid #2196F3;
 }
 
-.checkbox input:checked+.checkbox__check::after {
+input:checked+.checkbox__check::after {
     opacity: 1;
     -webkit-transition-delay: .2s;
          -o-transition-delay: .2s;
@@ -213,7 +213,7 @@ textarea.textfield__input,
 
 /* radio buttons */
 /* layer 0 */
-.radio .radio__check::before {
+.radio__check::before {
     content: '';
     position: absolute;
     z-index: 1;
@@ -222,7 +222,7 @@ textarea.textfield__input,
 }
 
 /* layer 1 */
-.radio .radio__check::after {  
+.radio__check::after {  
     content: "";
     position: absolute;
     z-index: 2;
@@ -235,11 +235,11 @@ textarea.textfield__input,
 }
 
 /* active state */
-.radio input:checked+.radio__check::before {
+input:checked+.radio__check::before {
     border: 2px solid #2196f3;
 }
 
-.radio input:checked+.radio__check::after {
+input:checked+.radio__check::after {
     opacity: 1;
     -webkit-transform: scale(.45);
         -ms-transform: scale(.45);
@@ -247,7 +247,7 @@ textarea.textfield__input,
 }
 
 /* switch */
-.switch .switch__check {
+.switch__check {
     background: rgba(0,0,0, 0.26);
     left: 0;
     top: 2px;
@@ -257,7 +257,7 @@ textarea.textfield__input,
     cursor: pointer;
 }
 
-.switch .switch__check::after {
+.switch__check::after {
     content: "";
     background-color: #fff;
     position: absolute;
@@ -272,301 +272,13 @@ textarea.textfield__input,
 }
 
 /* active state */
-.switch input:checked+.switch__check {
+input:checked+.switch__check {
     background-color: rgba(33, 150, 243, 0.55);
 }
 
-.switch input:checked+.switch__check::after {
+input:checked+.switch__check::after {
     background-color: #2196F3;
     left: 16px;
     -webkit-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
             box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 1px 8px 0 rgba(0, 0, 0, 0.12); 
-}
-
-/* material slider */
-
-/* tracks */
-.slider__input {
-    -webkit-appearance: none!important;
-       -moz-appearance: none!important;
-            appearance: none!important;
-    background-color: transparent!important;
-    outline:none;
-    width: 100%;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-    z-index: 1;
-    -ms-flex-item-align: center;
-     -webkit-align-self: center;
-     -ms-grid-row-align: center;
-             align-self: center;
-}
-
-.slider__input::-moz-focus-outer {
-    border: none;
-}
-
-.slider__input::-ms-tooltip {
-    display: none;
-}
-
-
-.slider__input::-webkit-slider-runnable-track {
-    background: transparent; 
-    width: 100%;
-    height: 12px;
-    border: none;
-}
-
-.slider__input::-moz-range-track {
-    background: transparent;
-    width: 100%;
-    height: 12px;
-    border: none; 
-}
-
-.slider__input::-ms-track {
-    box-sizing: content-box;
-    background: transparent;
-    color: transparent;
-    width: 100%;
-    height: 22px;
-    border-color: transparent;
-}
-
-.slider__input::-ms-fill-lower {
-    border: none;
-    background-color: transparent;
-}
-
-.slider__input::-ms-fill-upper {
-    border: none;
-    background-color: transparent;
-}
-
-/* thumbs */
-.slider__input::-webkit-slider-thumb {
-    -webkit-appearance: none!important;
-            appearance: none!important;
-    width: 12px;
-    height: 12px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    border-radius: 50%;
-    background: #2196F3;
-    border: none;
-    -webkit-transition: border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-    -webkit-transition: border 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: border 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-    -o-transition: transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.slider__input::-moz-range-thumb {
-    -moz-appearance: none!important;
-         appearance: none!important;
-    width: 12px;
-    height: 12px;
-    -moz-box-sizing: border-box;
-         box-sizing: border-box;
-    border-radius: 50%;
-    background: #2196F3;
-    border: none;
-    transition: border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-    -webkit-transition: border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-    -webkit-transition: border 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: border 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-    -o-transition: transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* thumb active state */
-.slider__input:focus:not(:active).slider__input::-webkit-slider-thumb {
-    -webkit-box-shadow: 0 0 0 8px rgba(33, 150, 243, .26);
-            box-shadow: 0 0 0 8px rgba(33, 150, 243, .26);
-}
-
-.slider__input:focus:not(:active).slider__input::-moz-range-thumb{
-    box-shadow: 0 0 0 8px rgba(33, 150, 243, .26);
-}
-
-.slider__input:active.slider__input::-webkit-slider-thumb {
-    -webkit-transform:scale(1.5);
-            transform:scale(1.5);
-}
-.slider__input:active.slider__input::-moz-range-thumb{
-    transform:scale(1.5);
-}
-
-/* for IE :/ */
-.slider__input::-ms-thumb {
-    width: 12px;
-    height: 12px;
-    border: none;
-    border-radius: 50%;
-    background: #2196F3;
-    margin-left: 4px;
-    margin-right: 4px;
-}
-        
-.slider__input:active::-ms-thumb {
-    background: #2196F3;
-    -webkit-transform:scale(1.5);
-       -ms-transform: scale(1.5);
-           transform: scale(1.5); 
-}
-
-.slider__input:focus:not(:active).slider__input::-ms-thumb{
-    box-shadow: 0 0 0 6px rgba(33, 150, 243, .26);
-}
-
-.slider {
-    height: 18px;
-    margin: 8px 0px;
-    position: relative;
-    background: none;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: -moz-box;
-    display: flex;
-    -webkit-box-orient: horizontal;
-       -moz-box-orient: horizontal;
-    -webkit-box-direction: normal;
-       -moz-box-direction: normal;
-    -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-            flex-direction: row; 
-    -webkit-align-items: center; 
-      -webkit-box-align: center;
-         -moz-box-align: center; 
-         -ms-flex-align: center;
-            align-items: center;
-}
-
-.slider__background {
-    background: rgba(0, 0, 0, .26);
-    position: absolute;
-    border-radius: 12px;
-    height: 2px;
-    width: 100%;
-    left: 0;
-    top: -webkit-calc(50% - .5px);
-    top: calc(50% - .5px);
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: -moz-box;
-    display: flex;
-    overflow: hidden;
-}
-
-.slider__progressbar {
-    background-color: #2196F3;
-    width: 0;
-    -webkit-transition: 0s!important;
-         -o-transition: 0s!important;
-            transition: 0s!important;
-}
-
-
-/* IE10+ CSS styles go here */
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-    .slider__background {
-        width: -webkit-calc(100% - 22px);
-        width: calc(100% - 22px);
-        left: 11px;
-    }
-}
-
-/* IE Edge 12+ CSS styles go here */ 
-@supports (-ms-ime-align:auto) {
-    .slider__background {
-        width: -webkit-calc(100% - 22px);
-        width: calc(100% - 22px);
-        left: 11px;
-     }
-}
-
-.slider__input::-ms-thumb {
-    margin-left: 11px;
-    margin-right: 11px;
-}
-
-/* disabled state */
-/* [class*=material-] input[disabled]~*,
-[class*=material-] input.disabled~*,
-[class*=material-] input[disabled],
-[class*=material-] input.disabled,
-[class*=material-] textarea[disabled]~*,
-[class*=material-] textarea.disabled~*,
-[class*=material-] textarea[disabled],
-[class*=material-] textarea.disabled {
-    cursor: not-allowed!important;
-    color: rgba(0, 0, 0, 0.26)!important;
-} */
-
-.textfield input[disabled],
-.textfield input.disabled,
-.textfield textarea[disabled],
-.textfield textarea.disabled {
-    cursor: not-allowed!important;
-    color: rgba(0, 0, 0, 0.26)!important;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.26)!important;
-}
-
-.checkbox input.disabled~.checkbox__check::before,
-.checkbox input[disabled]~.checkbox__check::before,
-.radio input.disabled~.radio__check::before,
-.radio input[disabled]~.radio__check::before{
-    cursor: not-allowed!important;
-    color: rgba(0, 0, 0, 0.26)!important;
-    border: 2px solid rgba(0, 0, 0, 0.26)!important;
-}
-
-.switch input.disabled~.switch__check::after,
-.switch input[disabled]~.switch__check::after { 
-    cursor: not-allowed!important;
-    color: rgba(0, 0, 0, 0.26)!important;
-    background-color: #ccc;
-}
-
-.slider__input[disabled]::-webkit-slider-thumb,
-.slider__input.disabled::-webkit-slider-thumb {
-    -webkit-box-shadow: none!important;
-            box-shadow: none!important;
-    -webkit-transform: scale(1)!important; 
-            transform: scale(1)!important;
-    background-color: #ccc!important;
-}
-    
-.slider__input[disabled]::-moz-range-thumb,
-.slider__input.disabled::-moz-range-thumb {
-    box-shadow: none!important;
-    transform: scale(1)!important;
-    background-color: #ccc!important;
-}
-
-.slider__input[disabled]::-ms-thumb,
-.slider__input.disabled::-ms-thumb {
-    box-shadow: none!important;
-    -ms-transform: scale(1)!important; 
-        transform: scale(1)!important;
-    background-color: #ccc!important;
-}
-
-.slider__input[disabled]~.slider__background,
-.slider__input.disabled~.slider__background {
-    background-color: rgba(102, 102, 102, .26)!important;
-}
-
-.slider__input[disabled]~.slider__background .slider__progressbar,
-.slider__input[disabled]~.slider__background .slider__progressbar {
-    background-color: #ccc!important;
 }
