--- a/css/footer.css
+++ b/css/footer.css
@@ -4,13 +4,9 @@
 }
 
 .footer {
-    padding: 32px 16px;
     color: #9e9e9e;
-    background-color: #424242; 
-}
-
-.footer .list {
-    margin: 0px 16px;
+    background-color: #424242;
+    padding: 16px 0;
 }
 
 .footer .title {
@@ -25,16 +21,16 @@
     height: 36px;
     padding: 0;
     margin: 8px 16px;
-    border: none; 
+    border: none;
     border-radius: 2px;
-    background-color: rgb(158,158,158);
+    background-color: rgb(158, 158, 158);
     color: #424242;
     font-size: 24px;
     text-align: center;
     line-height: 36px;
 }
 
-.footer__left, 
+.footer__left,
 .footer__right,
 .footer__center {
     display: -webkit-box;
@@ -43,32 +39,31 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-justify-content: space-around;
-        -ms-flex-pack: distribute;
-            justify-content: space-around;
-    margin: 16px 0px;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    padding: 16px 16px;
     max-width: 100%;
 }
 
-.footer__left, 
+.footer__left,
 .footer__right {
     -webkit-box-flex: 1;
     -webkit-flex: 1 0 0;
-       -moz-box-flex: 1;
-        -ms-flex: 1 0 0px;
-            flex: 1 0 0;
+    -moz-box-flex: 1;
+    -ms-flex: 1 0 0px;
+    flex: 1 0 0;
 }
 
 .footer__center {
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 auto;
-       -moz-box-flex: 0;
-        -ms-flex: 0 0 auto;
-            flex: 0 0 auto;
+    -moz-box-flex: 0;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
 }
-
 
 @media screen and (min-width: 48em) {
     .footer,
@@ -81,34 +76,31 @@
         -webkit-box-align: start;
         -webkit-align-items: flex-start;
         -moz-box-align: start;
-            -ms-flex-align: start;
-                align-items: flex-start;
+        -ms-flex-align: start;
+        align-items: flex-start;
     }
-
     .footer__left {
         -webkit-box-pack: start;
         -webkit-justify-content: flex-start;
         -moz-box-pack: start;
-            -ms-flex-pack: start;
-                justify-content: flex-start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
         margin: 0;
     }
-
     .footer__center {
-            -webkit-box-pack: center;
+        -webkit-box-pack: center;
         -webkit-justify-content: center;
         -moz-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
         margin: 0 auto;
     }
-
     .footer__right {
         -webkit-box-pack: end;
         -webkit-justify-content: flex-end;
         -moz-box-pack: end;
-            -ms-flex-pack: end;
-                justify-content: flex-end;
+        -ms-flex-pack: end;
+        justify-content: flex-end;
         margin: 0;
     }
 }
