--- a/css/lists-and-tables.css
+++ b/css/lists-and-tables.css
@@ -8,12 +8,12 @@
 }
 
 .table tr:first-child th:first-child,
-.table--all tr:first-child th:first-child{
+.table--all tr:first-child th:first-child {
     border-top-left-radius: 2px;
 }
 
 .table tr:first-child th:last-child,
-.table--all tr:first-child th:last-child{
+.table--all tr:first-child th:last-child {
     border-top-right-radius: 2px;
 }
 
@@ -27,7 +27,7 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
-.table.striped tbody tr:nth-child(even), 
+.table.striped tbody tr:nth-child(even),
 .list.striped li:nth-child(even),
 .table--all tr:nth-child(even) {
     background-color: #e8e8e8;
@@ -87,4 +87,8 @@
 
 .list li:last-child {
     border-bottom: none;
+}
+
+.list.inline li {
+    display: inline-block;
 }
